WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115119
WEB SPEECH: language support does not work as expected
https://bugs.webkit.org/show_bug.cgi?id=115119
Summary
WEB SPEECH: language support does not work as expected
chris fleizach
Reported
2013-04-24 11:13:03 PDT
Web Speech API languge support does not work as expected. * STEPS TO REPRODUCE var u = new SpeechSynthesisUtterance(); u.text = 'Hola. ¿Que tal?'; u.lang = 'es-MX'; u.onend = function(event) { alert('Finished in ' + event.elapsedTime + ' seconds.'); } speechSynthesis.speak(u); * RESULTS Spoken (and mispronounced) with Alex voice Expected "Javier compact" or another Spanish voice.
Attachments
patch
(5.81 KB, patch)
2013-04-24 11:18 PDT
,
chris fleizach
ap
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2013-04-24 11:18:41 PDT
Created
attachment 199504
[details]
patch
Build Bot
Comment 2
2013-04-24 11:49:15 PDT
Comment on
attachment 199504
[details]
patch
Attachment 199504
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/166715
Build Bot
Comment 3
2013-04-24 12:04:19 PDT
Comment on
attachment 199504
[details]
patch
Attachment 199504
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/71465
chris fleizach
Comment 4
2013-04-24 12:38:32 PDT
This will fail until I get the WK system interface part in
chris fleizach
Comment 5
2013-04-25 17:27:17 PDT
http://trac.webkit.org/changeset/149156
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug