WEB SPEECH: language support does not work as expected https://bugs.webkit.org/show_bug.cgi?id=115119

Reviewed by Alexey Proskuryakov.

Source/WebCore:

Make the Mac platform synthesizer have access to all the voices installed on the system.

* WebCore.exp.in:
* platform/mac/PlatformSpeechSynthesizerMac.mm:
(WebCore::PlatformSpeechSynthesizer::initializeVoiceList):
* platform/mac/WebCoreSystemInterface.h:
* platform/mac/WebCoreSystemInterface.mm:

Source/WebKit/mac:

* WebCoreSupport/WebSystemInterface.mm:
(InitWebCoreSystemInterface):

Source/WebKit2:

* WebProcess/WebCoreSupport/mac/WebSystemInterface.mm:
(InitWebCoreSystemInterface):

WebKitLibraries:

* WebKitSystemInterface.h:



Canonical link: https://commits.webkit.org/133653@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149156 268f45cc-cd09-0410-ab3c-d52691b4dbfc