Source/WebKit2/WebProcess/WebCoreSupport/mac/WebSystemInterface.mm
@@ -142,6 +142,9 @@ void InitWebCoreSystemInterface(void)
         INIT(SetRequestStorageSession);
 #endif
 
+#if PLATFORM(MAC)
+        INIT(SpeechSynthesisGetVoiceIdentifiers);
+#endif
         INIT(GetAXTextMarkerTypeID);
         INIT(GetAXTextMarkerRangeTypeID);
         INIT(CreateAXTextMarker);
